--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@reduxjs/toolkit": "^2.9.2",
+    "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "mapbox-gl": "^3.15.0",
     "maplibre-gl": "^5.9.0",
