--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "lucide-react": "^0.544.0",
     "mapbox-gl": "^3.15.0",
     "maplibre-gl": "^5.9.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.0.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-map-gl": "^8.1.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
