--- a/.github/workflows/CD-workflows.yml
+++ b/.github/workflows/CD-workflows.yml
@@ -13,6 +13,8 @@ jobs:
       CLIENT_PORT: ${{ secrets.CLIENT_PORT }}
       NEXT_PUBLIC_APP_API_URL: ${{ secrets.NEXT_PUBLIC_APP_API_URL }}
       NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN: ${{ secrets.NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN }}
+      NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME: ${{ secrets.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}
+      NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET: ${{ secrets.NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET }}
     
     steps:
       - name: Checkout code
@@ -52,6 +54,8 @@ jobs:
           CLIENT_PORT=${{ env.CLIENT_PORT }}
           NEXT_PUBLIC_APP_API_URL=${{ env.NEXT_PUBLIC_APP_API_URL }}
           NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN=${{ env.NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN }}
+          NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=${{ env.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}
+          NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=${{ env.NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET }}
           EOF
           echo ".env file created"
 
