--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "i18next": "^25.6.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "mapbox-gl": "^3.15.0",
     "maplibre-gl": "^5.9.0",
     "next": "^16.0.1",
+    "next-i18next": "^15.4.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.0",
+    "react-i18next": "^16.3.5",
     "react-map-gl": "^8.1.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
