--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "sockjs-client": "^1.6.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12"
