--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.3.5",
     "react-map-gl": "^8.1.0",
     "react-redux": "^9.2.0",
