--- a/.github/workflows/CD-workflows.yml
+++ b/.github/workflows/CD-workflows.yml
@@ -26,9 +26,16 @@ jobs:
           name: docker-image
           path: /tmp
 
+      - name: Debug artifact location
+        run: |
+          echo "=== /tmp ==="
+          ls -lah /tmp
+          echo "=== /tmp/docker-image ==="
+          ls -lah /tmp/docker-image
+
       - name: Load Docker Image
         run: |
-          docker load -i /tmp/danang-culinary-atlas-fe.tar
+          docker load -i /tmp/docker-image/danang-culinary-atlas-fe.tar
           docker images | grep ${{ env.IMAGE_NAME }}
 
       - name: Tag Image for Deployment
