fix: correct Docker image load command in CI/CD workflow to use the proper file path

--- a/.github/workflows/CD-workflows.yml
+++ b/.github/workflows/CD-workflows.yml
@@ -29,13 +29,11 @@ jobs:
       - name: Debug artifact location
         run: |
           echo "=== /tmp ==="
-          ls -lah /tmp
-          echo "=== /tmp/docker-image ==="
-          ls -lah /tmp/docker-image || echo "docker-image directory not found"
+          ls -lah /tmp | grep danang-culinary-atlas-fe.tar || echo "File not found in /tmp"
 
       - name: Load Docker Image
         run: |
-          docker load -i /tmp/docker-image/danang-culinary-atlas-fe.tar
+          docker load -i /tmp/danang-culinary-atlas-fe.tar
           docker images | grep ${{ env.IMAGE_NAME }}
 
       - name: Tag Image for Deployment
