--- a/.github/workflows/CD-workflows.yml
+++ b/.github/workflows/CD-workflows.yml
@@ -15,6 +15,8 @@ jobs:
       NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN: ${{ secrets.NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN }}
       NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME: ${{ secrets.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}
       NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET: ${{ secrets.NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET }}
+      NEXT_PUBLIC_WEBSOCKET_URL: ${{ secrets.NEXT_PUBLIC_WEBSOCKET_URL }}
+      NEXT_PUBLIC_RECOMMENDATION_API_URL: ${{ secrets.NEXT_PUBLIC_RECOMMENDATION_API_URL }}
     
     steps:
       - name: Checkout code
@@ -61,6 +63,8 @@ jobs:
           NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN=${{ env.NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN }}
           NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=${{ env.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}
           NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=${{ env.NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET }}
+          NEXT_PUBLIC_WEBSOCKET_URL=${{ env.NEXT_PUBLIC_WEBSOCKET_URL }}
+          NEXT_PUBLIC_RECOMMENDATION_API_URL=${{ env.NEXT_PUBLIC_RECOMMENDATION_API_URL }}
           EOF
           echo ".env file created"
 
